--- a/Interim/interim.tex
+++ b/Interim/interim.tex
@@ -150,6 +150,13 @@ The maximum independent set (MIS) QUBO takes the form
 \end{equation}
 where we take $x_i=1$ as the inclusion of that node in the solution set. The first term penalises any edges in the solution by increasing the energy by $A$, whilst the second term is the objective term, that is, the quantity we are trying the minimise.
 
+This can further be expanded to include weights on the nodes, which can be used to represent the quality of the phrases. The MIS QUBO then becomes
+\begin{equation}
+    f(x)=A\sum_{ij\in E}x_ix_j-B\sum_i W_ix_i\,,
+    \label{eq:weightedMIS}
+\end{equation}
+where $W$ is a vector of real weights.
+
 % Have simple graph example here with figure
 
 
@@ -229,15 +236,10 @@ Once the graph is formed, the weighted MIS QUBO can be constructed via Eq.\ [EQU
 \newpage
 \section{Results}
 
-% TODO: replace with pdf
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=\linewidth]{../Trials/1_excerpt.png}
-    \caption{An excerpt of the beginning of String Quartet No.\ 15 in A minor, Op.\ 132, by Ludwig van Beethoven.}
-    \label{fig:excerpt}
-\end{figure}
+The method was tested on an excerpt of String Quartet No.\ 10 in E-flat major, Op.\ 74, by Ludwig van Beethoven, nicknamed the ``Harp'' quartet. This was chosen due to its relatively simple structure and smaller instrumentation, making it easier to identify and arrange the musical phrases. Fig.\ \ref{fig:excerpt} shows the first 13 measures of the original score.
 
-% TODO: replace with pdf
+Phrases identified using the LBDM model are shown in Fig.\ \ref{fig:phrases}, alongside their calculated entropies according to Eq.\ \ref{eq:entropy}. A graph representation of the phrases can be seen in Fig.\ \ref{fig:graph}, with the nodes representing the phrases and the edges connecting overlapping phrases. Many of the nodes form cliques of three or four vertices, that is, each node of the subset is connected to every other node. This can be expected, as often musical phrases across instruments will occur simultaneously, especially in small ensemble music such as this. Notably, there are also two disjoint cliques, which can be seen as distinct musical ideas that are separtated by rests from the other phrases (for example, the first two measures of the piece). A non-negligibile number of phrases are calculated to have zero entropy—these are phrases identified as only having one note, and thus no variety in pitch or rhythm.
+
 \begin{figure}[h]
     \centering
     \includegraphics[width=\linewidth]{../Figures/boundary_offset.pdf}
@@ -245,29 +247,57 @@ Once the graph is formed, the weighted MIS QUBO can be constructed via Eq.\ [EQU
     \label{fig:boundary-strengths}
 \end{figure}
 
-% TODO: replace with pdf
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\linewidth]{../Trials/1_graph.png}
-    \caption{The representation of Fig.\ \ref{fig:excerpt} as a graph. The nodes are the identified musical phrases, with edges connecting them if they overlap.}
+    \includegraphics[width=\linewidth]{../Figures/problemGraph.pdf}
+    \caption{The representation of Fig.\ \ref{fig:phrases} as a graph. The nodes are the identified musical phrases, with edges connecting them if they overlap. The entropy of each phrase is represented by the colour of the node.}
     \label{fig:graph}
 \end{figure}
 
-% TODO: replace with pdf
+After submitting a QUBO calculated using Eq.\ \ref{eq:weightedMIS}, the D-Wave QPU returned a sampleset of solutions, which can be seen in Fig.\ \ref{fig:histogram}. Many solutions had the same energy but used slightly different combinations of phrases to make the maximal independent set; this degeneracy is likely due to the high number of cliques, which only allows one node of the subset to be picked, and phrases with zero entropy, which do not change the final energy when interchanged. One of the lowest energy solutions can be seen in Fig.\ \ref{fig:solution}, with the nodes selected by the QPU highlighted. In this solution, none of the nodes are connected by edges, providing a valid arrangement. The musical score of this solution is shown in Fig.\ \ref{fig:arrangement}.
+
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\linewidth]{../Trials/1_solution.png}
-    \caption{The graph of Fig.\ \ref{fig:graph} but with the nodes selected by the QPU highlighted. In this solution, none of the nodes are connected by edges, providing a feasible arrangement.}
+    \includegraphics[width=\linewidth]{../Figures/histogram.pdf}
+    \caption{A histogram of the solutions returned by the QPU, over 1000 total reads. Solutions with energies above zero are omitted.}
+    \label{fig:histogram}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\linewidth]{../Figures/solutionGraph.pdf}
+    \caption{The graph of Fig.\ \ref{fig:graph} but with the nodes selected by the QPU highlighted. In this solution, none of the nodes are connected by edges, providing a feasible arrangement, which can be seen in Fig.\ \ref{fig:arrangement}.}
     \label{fig:solution}
 \end{figure}
 
-% TODO: replace with pdf
-\begin{figure}[h]
+\begin{figure*}[h]
+    \newcommand{\subfigurewidth}{0.9\linewidth}
     \centering
-    \includegraphics[width=\linewidth]{../Trials/1_arrangement.png}
-    \caption{The reconstructed phrases, as seen in Fig.\ \ref{fig:solution}, forming the final arrangement. Note that, with comparison to Fig.\ \ref{fig:excerpt}, some symbolic elements are missing due to the segmentation of the original parts.}
-    \label{fig:arrangement}
-\end{figure}
+    \begin{subfigure}[b]{0.5\linewidth}
+        \includegraphics[width=\subfigurewidth]{../Figures/excerpt-1.png}
+        \caption{Original excerpt.}
+        \label{fig:excerpt}
+    \end{subfigure}\hfill
+    \begin{subfigure}[b]{0.5\linewidth}
+        \includegraphics[width=\subfigurewidth]{../Figures/excerpt-1.png}
+        \caption{Musical phrases are identified and labelled with their entropy.}
+        \label{fig:phrases}
+    \end{subfigure}
+    \par\bigskip
+    \begin{subfigure}[b]{0.5\linewidth}
+        \includegraphics[width=\subfigurewidth]{../Figures/excerpt-1.png}
+        \caption{Selected phrases from solving the MIS problem.}
+    \end{subfigure}\hfill
+    \begin{subfigure}[b]{0.5\linewidth}
+        \includegraphics[width=\subfigurewidth]{../Figures/excerpt-1.png}
+        \caption{Final arrangement.}
+        \label{fig:arrangement}
+    \end{subfigure}
+    \caption{The beginning of String Quartet No.\ 15 in A minor, Op.\ 132, by Ludwig van Beethoven.}
+    \label{fig:results}
+\end{figure*}
+
+\clearpage
 
 \section{Conclusions}
 
