Add score figures

--- a/Interim/interim.tex
+++ b/Interim/interim.tex
@@ -285,11 +285,12 @@ After submitting a QUBO calculated using Eq.\ \ref{eq:weightedMIS}, the D-Wave Q
     \end{subfigure}
     \par\bigskip
     \begin{subfigure}[b]{0.5\linewidth}
-        \includegraphics[width=\subfigurewidth]{../Figures/excerpt-1.png}
+        \includegraphics[width=\subfigurewidth]{../Figures/selected-1.png}
         \caption{Selected phrases from solving the MIS problem.}
     \end{subfigure}\hfill
-    \begin{subfigure}[b]{0.5\linewidth}
-        \includegraphics[width=\subfigurewidth]{../Figures/excerpt-1.png}
+    \begin{subfigure}[t]{0.5\linewidth}
+        \centering
+        \includegraphics[width=\subfigurewidth]{../Figures/arrangement-1.png}
         \caption{Final arrangement.}
         \label{fig:arrangement}
     \end{subfigure}
